Implement bounded organization structure
